<resources>
    <!-- General Strings -->
    <string name="app_name">One Rep Max Tracker</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="percentage">%1$d %%</string>
    <string name="weight_with_unit">%1$s %2$s</string>
    <string name="back_button_content_description">Back button</string>

    <!-- Top Bar Titles -->
...
    <string name="movement_list_screen_add_or_edit_movement_dialog_name_label">Name</string>
    <string name="movement_list_screen_add_or_edit_movement_dialog_name_field_content_description">Movement name text field</string>
    <string name="movement_list_screen_add_or_edit_movement_dialog_weight_label">Weight (%1$s)</string>

    <!-- Movement Detail Screen -->
    <string name="movement_detail_screen_edit_movement_button_content_description">Edit movement button</string>
    <string name="movement_detail_screen_add_result_button_content_description">Add result button</string>
    <string name="movement_detail_screen_add_result_button">+ Add new</string>
    <string name="movement_detail_screen_result_card_content_description">Result card</string>
    <string name="movement_detail_screen_result_card_edit_icon_content_description">Navigation icon</string>

    <string name="movement_detail_screen_add_result_dialog_content_description">Add result dialog</string>
    <string name="movement_detail_screen_add_result_dialog_title">Add new result</string>
    <string name="movement_detail_screen_add_result_dialog_confirm_button">Add result</string>
    <string name="movement_detail_screen_add_result_dialog_confirm_button_content_description">Add result button</string>

    <string name="movement_detail_screen_edit_result_dialog_content_description">Edit result dialog</string>
    <string name="movement_detail_screen_edit_result_dialog_title">Edit result</string>
    <string name="movement_detail_screen_edit_result_dialog_confirm_button_content_description">Edit result button</string>
    <string name="movement_detail_screen_edit_result_dialog_delete_button">Delete result</string>

    <string name="movement_detail_screen_add_or_edit_result_dialog_weight_label">Weight (%1$s)</string>
    <string name="movement_detail_screen_add_or_edit_result_dialog_weight_field_content_description">Weight text field</string>
    <string name="movement_detail_screen_add_or_edit_result_dialog_date_label">Date</string>
    <string name="movement_detail_screen_add_or_edit_result_dialog_comment_label">Comment</string>

    <!-- Result Detail Screen -->
    <string name="result_detail_screen_edit_result_button_content_description">Edit result button</string>

...
