...
    setDialogVisibility: (Boolean) -> Unit = {},
    onAccept: (OffsetDateTime) -> Unit = {},
) {
    OutlinedTextField(
        modifier = Modifier
            .clickable { setDialogVisibility(true) }
            .semantics { contentDescription = "Outlined Text Field Date Picker" },
        enabled = false,
        value = currentDateTime.formatTo("dd MMM yyyy"),
        onValueChange = {},
        textStyle = textStyle,
        colors = OutlinedTextFieldDefaults.colors(
            disabledTextColor = MaterialTheme.colorScheme.onSurface,
...
            modifier = Modifier.semantics { contentDescription = "Date picker dialog" },
            onDismissRequest = onCancel,
            confirmButton = {
                Button(
                    onClick = { onAccept(state.selectedDateMillis) },
                ) {
                    Text("Accept")
                }
            },
            dismissButton = {
                Button(
                    onClick = onCancel,
                ) {
...
